# cabaret

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  cabaret.camera.html  cabaret.html  citation.html  complete_example.ipynb  genindex.html  index.html  installation.html  local_catalog.html  motivation.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: citation.doctree  index.doctree  installation.doctree  local_catalog.doctree  motivation.doctree
.doctrees/notebooks/: configuring_an_observatory.doctree  multi_band_query.doctree  quickstart.doctree
.github/workflows/: documentation.yml  format_and_test.yml  publish.yml
_modules/: index.html
_modules/cabaret/: camera.html  focuser.html  observatory.html  queries.html  site.html  sources.html  telescope.html
_sources/: cabaret.md  installation.md
docs/source/: cabaret.md  conf.py  index.md  local_catalog.md  local_database.md
docs/source/notebooks/: asteroid_trailing.ipynb  multi_band_query.ipynb  quickstart.ipynb
notebooks/: configuring_an_observatory.html  multi_band_query.html  quickstart.html
paper/: paper.bib  paper.md
paper/figures/: comparison_figures.ipynb  number_of_stars_comparison_threshold-7_20251001_152839.csv  process_fields.py
src/cabaret/: __init__.py  camera.py  fits_manager.py  focuser.py  image.py  observatory.py  plot.py  queries.py  site.py  sources.py  telescope.py
tests/: test_docstrings.py  test_image.py  test_observatory.py  test_queries.py  test_sources.py  utils.py
