[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[dependency-groups]
dev = [
  {include-group = "test"},
  "pre-commit>=4.5.1",
  "ruff>=0.15.10"
]
docs = [
  "docformatter[tomli]>=1.7.7",
  "ipywidgets>=8.1.8",
  "matplotlib>=3.10.8",
  "myst-nb>=1.4.0",
  "numpydoc>=1.10.0",
  "sphinx>=9.0.4",
  "sphinx-book-theme>=1.2.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.7.0",
  "toml>=0.10.2"
]
test = [
  "matplotlib>=3.10.8",
  "pytest>=9.0.3"
]

[project]
authors = [
  {name = "Peter Pedersen"},
  {name = "Lionel Garcia"},
  {name = "David Degen"}
]
dependencies = ["numpy", "astropy", "astroquery"]
license = {text = "MIT License"}
name = "cabaret"
readme = "README.md"
repository = "https://github.com/ppp-one/cabaret"
requires-python = ">=3.11"
version = "0.5.1"

[project.optional-dependencies]
plot = ["matplotlib"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
exclude = ["*.yaml"]
extend-include = ["*.ipynb"]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "F", "I001", "UP"]
